# conan-py-build

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  hooks.py  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-wheels.yml  ci.yml  cibw-example.yml  docs.yml  release.yml
configuration/: index.html
development/: index.html
docs/: configuration.md  development.md  examples.md  index.md  llms.txt
examples/: index.html
examples/basic/: CMakeLists.txt  LICENSE  README.md  conanfile.py  pyproject.toml
examples/basic-cython/: CMakeLists.txt  README.md  conanfile.py  pyproject.toml
examples/basic-cython/src/fmt_cython/: __init__.py  _fmt.pyx
examples/basic-cython/src/myformatter/: __init__.py  _myformatter.pyx  formatter.h
examples/basic-meson-pybind11/: README.md  conanfile.py  meson.build  pyproject.toml
examples/basic-meson-pybind11/python/myadder_meson_pybind11/: __init__.py
examples/basic-meson-pybind11/src/: myadder.cpp
examples/basic-meson-pybind11/src/extra_utils/: __init__.py
examples/basic-meson-pybind11/src/myadder_meson_pybind11/: __init__.py
examples/basic-nanobind/: CMakeLists.txt  conanfile.py  pyproject.toml
examples/basic-pybind11/: CMakeLists.txt  README.md  conanfile.py  pyproject.toml
examples/basic-pybind11/python/myadder_pybind11/: cli.py
examples/basic-scm/: CMakeLists.txt  README.md  pyproject.toml
examples/basic-scm/conan/: conanfile.py
examples/basic-scm/src/: myadder.cpp
examples/basic-scm/src/myadder_scm/: __init__.py
examples/basic-wheel-packages/: CMakeLists.txt  conanfile.py  pyproject.toml
examples/basic/conan/: conanfile.py
examples/basic/src/: myadder.cpp
examples/basic/src/myadder/: __init__.py
examples/cibw-example/: .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml  test_installed.py
examples/cibw-example/profiles/: macos-arm64.jinja  macos-x86_64.jinja
examples/cibw-example/src/: myxslt.cpp
examples/cibw-example/src/myxslt_cibw/: __init__.py
examples/external-sources/: README.md  conandata.yml  conanfile.py  pyproject.toml
examples/external-sources/src/: CMakeLists.txt  hello_bindings.cpp
examples/external-sources/src/hello_bindings/: __init__.py
examples/profiles/: linux.jinja  macos.jinja  windows.jinja
recipes/cpython/: conandata.yml  conanfile.py
recipes/cpython/test_package/: conanfile.py
search/: search_index.json
src/conan_py_build/: __init__.py  build.py  wheel_deploy.py
tests/: test_integration.py  test_unit.py
