[build-system]
requires = ["conan-py-build", "cython>=3.0"]
build-backend = "conan_py_build.build"

[project]
name = "fmt-cython"
version = "0.1.0"
description = "A Cython extension with a typed computation loop and fmt C++ formatting"
license = "MIT"
requires-python = ">=3.8"

[tool.conan-py-build.wheel]
packages = ["src/myformatter"]
