[build-system]
# TODO: Change to requires = ["conan-py-build"] once published to PyPI
# For now, install manually: pip install -e ../..
requires = []
build-backend = "conan_py_build.build"

[project]
name = "myadder-pybind11"
dynamic = ["version"]
description = "A simple Python package with C++ code (pybind11) that adds two numbers"
requires-python = ">=3.8"

[tool.conan-py-build]
version-file = "src/myadder_pybind11/__init__.py"

[tool.conan-py-build.sdist]
# Drop README from the sdist
exclude = ["README.md"]
