[build-system]
requires = ["conan-py-build"]
build-backend = "conan_py_build.build"

[project]
name = "myxslt-cibw"
version = "0.1.0"
description = "Example: conan-py-build + cibuildwheel with a shared-lib dep chain (libxslt→libxml2, zlib static)"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.conan-py-build.wheel]
packages = ["src/myxslt_cibw"]

# Set all deps to shared, then pin zlib back to static so the wheel does not
# depend on the system zlib at runtime.
[tool.conan-py-build]
extra-arguments = [
    "-o=*:shared=True",
    "-o=zlib/*:shared=False",
]

[tool.conan-py-build.sdist]
exclude = ["README.md"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
# CI only: use --no-isolation so the build uses the conan-py-build wheel from the repo
# (installed in CIBW_BEFORE_BUILD) instead of the one from PyPI. For normal use you can omit this.
build-frontend = { name = "build", args = ["--no-isolation"] }
skip = ["*-musllinux*", "*-manylinux_i686", "*-win32"]
test-command = "python {project}/test_installed.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
repair-wheel-command = "MACOSX_DEPLOYMENT_TARGET=11.0 delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
# before-all installs delvewheel in the runner environment where repair-wheel-command runs.
# before-build would install it in the per-wheel build venv, which is not on the repair PATH.
before-all = "pip install delvewheel"
repair-wheel-command = 'delvewheel repair --add-path "{wheel}/../.conan-libs" -w "{dest_dir}" "{wheel}"'

# CONAN_CPYTHON_VERSION for Conan profiles that use cpython-portable (e.g. macOS x86_64)
[[tool.cibuildwheel.overrides]]
select = "cp39-*"
environment = { CONAN_CPYTHON_VERSION = "3.9.20" }

[[tool.cibuildwheel.overrides]]
select = "cp310-*"
environment = { CONAN_CPYTHON_VERSION = "3.10.19" }

[[tool.cibuildwheel.overrides]]
select = "cp311-*"
environment = { CONAN_CPYTHON_VERSION = "3.11.14" }

[[tool.cibuildwheel.overrides]]
select = "cp312-*"
environment = { CONAN_CPYTHON_VERSION = "3.12.12" }

[[tool.cibuildwheel.overrides]]
select = "cp313-*"
environment = { CONAN_CPYTHON_VERSION = "3.13.11" }
